--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/993789_cat_hello_kitty_maneki neko_icon.png">
     <div class="Container">
-        <h2>Bem-vindo :)</h2>
+        <p>Bem-vindo :D</p>
         <a href="soun.html" class="botao">Clique Aqui</a>
     </div>
 </head>
